--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
   database:
     image: mysql:latest
     environment:
-      - "MYSQL_ROOT_PASSWORD"
+      - "MYSQL_ROOT_PASSWORD=my-secret-pw"
     volumes:
       - db:/data/db
 volumes:
