--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,8 @@ services:
       - database
   database:
     image: mysql:latest
+    ports:
+      - "3306:3306"
     environment:
       - "MYSQL_ROOT_PASSWORD=my-secret-pw"
     volumes:
